--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright -->
 <head>
-	<title>Example website</title>
+	<title>Example new website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,6 +16,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			adding new content
 		</p>
 	</main>
 	<footer class="container">
