edit before rebase

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright -->
 <head>
-	<title>Example new website</title>
+	<title>Example new website aaaaaaaaaa</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
