tagging example 2 yey

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright -->
 <head>
-	<title>Example new website aaaaaaaaaa</title>
+	<title>Example new website tagging</title>
 bbbbbbbbbbb
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 cccccccccccccddddddddddddd
